# iconizer

./: CMakeLists.txt  README.md
qml/styles/: Style.qml
src/core/: main.cpp
